// Copyright 2016 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/rpc/status.proto";
import "mixer/v1/attributes.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;

// Used to verify preconditions before performing an action.
message CheckRequest {
  // Index within the stream for this request, used to match to responses
  int64 request_index = 1;

  // The attributes to use for this request
  Attributes attribute_update = 2 [(gogoproto.nullable) = false];
}

message CheckResponse {
  // Index of the request this response is associated with
  int64 request_index = 1;

  // The attributes to use for this response
  Attributes attribute_update = 2;

  // Indicates whether or not the preconditions succeeded
  google.rpc.Status result = 3 [(gogoproto.nullable) = false];

  // The amount of time for which this result can be considered valid, given the same inputs
  google.protobuf.Duration expiration = 4 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}
