// Copyright 2016 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/rpc/status.proto";
import "mixer/v1/attributes.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;

message QuotaRequest {
  // Index within the stream for this request, used to match to responses
  int64 request_index = 1;

  // The attributes to use for this request
  Attributes attribute_update = 2 [(gogoproto.nullable) = false];

  // Used for deduplicating quota allocation/free calls in the case of
  // failed RPCs and retries. This should be a UUID per call, where the same
  // UUID is used for retries of the same quota allocation call.
  string deduplication_id = 3;

  // The quota to allocate from.
  string quota = 4;

  // The amount of quota to allocate.
  int64 amount = 5;

  // If true, allows a response to return less quota than requested. When
  // false, the exact requested amount is returned or 0 if not enough quota
  // was available.
  bool best_effort = 6;
}

message QuotaResponse {
  // Index of the request this response is associated with.
  int64 request_index = 1;

  // The attributes to use for this response
  Attributes attribute_update = 2;

  // Indicates whether the quota request was successfully processed.
  google.rpc.Status result = 3 [(gogoproto.nullable) = false];

  // The amount of time the returned quota can be considered valid, this is 0 for non-expiring quotas.
  google.protobuf.Duration expiration = 4 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];

  // The total amount of quota returned, may be less than requested.
  int64 amount = 5;
}
